--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,18 @@
 <h1>Projects</h1>
 <p>
    <ol>
-    <li>This website</li>
+    <li> <a href="./spamenu.html">
+        <button style=" background-color: rgba(34,193,195,1);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: black;
+        border-radius: 10px;
+        font-size: 25px;
+        height:40px
+        "
+        >Spa Menu</button>
+        </a>
+
+    </li>
    </ol>
 </p>
 
